--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "l-react",
   "version": "0.1.0",
-  "homepage": "https://devjuwel.github.io/React-projects/",
+  "homepage": "https://devjuwel.github.io/l-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
